glx/testdata/invalid/invalid-relationship-participants/persons/person-child-bob.glx
persons:
  person-bob:
    properties:
      name:
        value: "Robert Thompson"
        fields:
          given: "Robert"
          surname: "Thompson"
      sex: male
